--- a/experiencia.html
+++ b/experiencia.html
@@ -17,6 +17,19 @@
 
 	 <a href="index.html"> Inicio </a> | <a href="educacion.html"> Educacion </a> | <a href="experiencia.html"> Experiencia</a>
 <br>
+<br>
+<h2>Experiencia</h2>
+<video src="video_audio/relajación.mp4" controls poster="img/ERROR.jpg" width="320" height="240"></video>
+
+
+
+<audio src="video_audio/20180519090435.m4a" controls></audio>
+
+
+
+
+
+
 	
 </body>
 </html>
