--- a/educacion.html
+++ b/educacion.html
@@ -4,19 +4,31 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>EDUCACION</title>
+	<style type="text/css" media="screen">
+
+ 	 h1.txtcentrado {
+		text-align:center;
+	}
+
+
+</style>
 	<link rel="stylesheet" href="">
 </head>
 <body>
 
 
 	<img src="img/icon.svg" alt="Icono_Iniciales" width="400px" height="240px">
+	
 	<h1 class="txtcentrado">Curriculum Vitae</h1><br>
-	<h2>Datos Personales</h2><br>
-	<h3>Delcy Pamela Manchame Buezo</h3>
-	<h3> 10 de enero de 1997</h3>
-	<h3> La lima, Cortes, Honduras</h3>
+		<h2>Datos Personales</h2><br>
+			<h3>Delcy Pamela Manchame Buezo<br> 10 de enero de 1997 <br> La lima, Cortes, Honduras</h3>
+<br>
+<br>
 
 	 <a href="index.html"> Inicio </a> | <a href="educacion.html"> Educacion </a> | <a href="experiencia.html"> Experiencia</a>
+<br>
+<br>
+<br>
 
 	 <h2>EDUCACION</h2>
 
@@ -46,17 +58,17 @@
 	 	</tr>
 	 	 	 	
 	 </table>
-	 	<br>
-	 	<br>
-	 	<br>
-	 	<br>
+<br>
+<br>
+<br>
+<br>
 <form action="">
 
-	<legend>Agregar Estudio </legend>
+	<legend><strong>Agregar Estudio</strong> </legend>
 	<br>
 	<br>
-	 		 
-	<select >
+	<label >Año</label> 		 
+	<select name="anio">
 		<option>2000</option>
 		<option>2001</option>
 		<option>2003</option>
@@ -71,13 +83,18 @@
 	<br>
 
 	<label for="instituto"> Instituto.</label>
-	<input type="text" id="instituto" required><br>
+		<input type="text" id="instituto" required><br>
+
 	<label for="lugar">Lugar.</label>
-<textarea  id="lugar" cols="20" rows="2" ></textarea>
+		<textarea  id="lugar" cols="20" rows="2" ></textarea>
 <br>
-<p> <input type="submit"></p>
+	<p> <input type="submit"></p>
 
+</form>
 
+	<br>
+	<br>
+	<br>
 	
 <footer>
 
