--- a/experiencia.html
+++ b/experiencia.html
@@ -5,25 +5,49 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Experiencia</title>
 	<link rel="stylesheet" href="">
+	<style type="text/css" media="screen">
+
+ 	 h1.txtcentrado {
+		text-align:center;
+	}
+
+
+</style>
 </head>
 <body>
 	<img src="img/icon.svg" alt="Icono_Iniciales" width="400px" height="240px">
 	
 	<h1 class="txtcentrado">Curriculum Vitae</h1><br>
-	<h2>Datos Personales</h2><br>
-	<h3>Delcy Pamela Manchame Buezo</h3>
-	<h3> 10 de enero de 1997</h3>
-	<h3> La lima, Cortes, Honduras</h3>
+		<h2>Datos Personales</h2><br>
+			<h3>Delcy Pamela Manchame Buezo<br> 10 de enero de 1997 <br> La lima, Cortes, Honduras</h3>
+<br>
+<br>
 
 	 <a href="index.html"> Inicio </a> | <a href="educacion.html"> Educacion </a> | <a href="experiencia.html"> Experiencia</a>
 <br>
 <br>
-<h2>Experiencia</h2>
-<video src="video_audio/relajación.mp4" controls poster="img/ERROR.jpg" width="320" height="240"></video>
 
+<h2>Experiencia</h2><br>
+<h3>40 Segundos de Relajacion</h3>
+<video src="video_audio/relajación.mp4" controls poster="img/ERROR.jpg" width="320" height="240">
+	<source src="video_audio/" type="/mov">
+</video>
+<br>
+<br>
 
-
+<h3>Oracion Del Hondureño</h3>
 <audio src="video_audio/20180519090435.m4a" controls></audio>
+<br>
+<br>
+<br>
+<br>
+<br>
+<footer>
+
+		<strong>Correo: pamelamanchame@gmail.com <br> Contacto: 504 94959411 <br> facebook: Pamela Manchame <br> Instagram: pamelamanchame</strong>
+	
+</footer>
+
 
 
 
