--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>INICIO</title>
-	
-
+<title>INICIO</title>
 
 
 <style type="text/css" media="screen">
@@ -20,15 +18,16 @@
 </style>
 
 </head>
+
 <body>
 
 	<img src="img/icon.svg" alt="Icono_Iniciales" width="400px" height="240px">
 	
 	<h1 class="txtcentrado">Curriculum Vitae</h1><br>
-	<h2>Datos Personales</h2><br>
-	<h3>Delcy Pamela Manchame Buezo</h3>
-	<h3> 10 de enero de 1997</h3>
-	<h3> La lima, Cortes, Honduras</h3>
+		<h2>Datos Personales</h2><br>
+			<h3>Delcy Pamela Manchame Buezo<br> 10 de enero de 1997 <br> La lima, Cortes, Honduras</h3>
+<br>
+<br>
 
 	 <a href="index.html"> Inicio </a> | <a href="educacion.html"> Educacion </a> | <a href="experiencia.html"> Experiencia</a>
 <br>
@@ -44,13 +43,14 @@
 		<li>Ingles(Nivel intermedio)</li>
 	</ul>
 
-
-
 <br>
-<footer>
+<br>
+<br>
 
-	<strong>Correo: pamelamanchame@gmail.com <br> Contacto: 504 94959411 <br> facebook: Pamela Manchame <br> Instagram: pamelamanchame</strong>
+	<footer>
+
+		<strong>Correo: pamelamanchame@gmail.com <br> Contacto: 504 94959411 <br> facebook: Pamela Manchame <br> Instagram: pamelamanchame</strong>
 	
-</footer>
+	</footer>
 </body>
 </html>
